# trevistest

./: .travis.yml  .trevis.yml.swp  CMakeLists.txt  README.md  Resources_guide.rst  readme.md  readme.rst  travis_ci.md
MatrixExp_with_CMake/: MatrixExp_with_CMake.rst
MatrixExp_with_CMake/provided_code/: CMakeLists.txt
MatrixExp_with_CMake/provided_code/src/: CMakeLists.txt  PrintMatrix.h  config.h.in
MatrixExp_with_CMake/solution/src/: CMakeLists.txt
src/: ExpEigenVal.f90  FillMatrix.cpp  FillMatrix.h  FillMatrix_c11.cpp  FillMatrix_c11.h  MatrixExp.cpp  PrintMatrix.cpp  TraceExp.f90
temp/: readme.rst
